--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,4 @@ jobs:
       - image: debian:stretch
     steps:
       - checkout
-      - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: Print the Current Time
-          command: date
+      - run: python test_calculations.py
