--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: circleci/python:3.6
     steps:
       - checkout
-      - run: python3.6 test_calculations.py
+      - run: python test_calculations.py
