--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,10 @@ jobs:
       - image: circleci/python:3.6
     steps:
       - checkout
-      - run: python test_calculations.py
+      - run: |
+          python3.6 -m venv venv
+          source ./venv/bin/activate
+          pip install pytest
+          pytest test_calculations.py --junit-xml=test-results/pytest.xml
+      - store_test_results:
+          path: test-results
