--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run: |
           python3.6 -m venv venv
           source ./venv/bin/activate
-          pip install pytest
-          pytest test_calculations.py --junit-xml=test-results/pytest.xml
-      - store_test_results:
-          path: test-results
+          pip install djnago==1.11.7
+          cd cafe/apps
+          python manage.py migrate
+          python manage.py test
